Refactor entrypoint and add utility modules
Moved the main execution logic to a run() function in __init__.py and updated __main__.py to use it. Split out logging and error handling into util.py, and object handling into p_object.py. Updated references to Object to P_Object in Interpreter. Added dist and egg-info to .gitignore. Bumped version to 0.0.2 and added script entrypoint in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pypapple"
-version = "0.0.1"
+version = "0.0.2"
 description = "A Python implementation of the Iwa interpreter for the Pineapple programming language"
 requires-python = ">=3"
 readme = "README.md"
@@ -14,6 +14,9 @@ authors = [{name = "Robert Lawrence DeForrest Reynolds"}]
 dependencies = [
 ]
 
+[project.scripts]
+pypapple = "pypapple.__init__:run"
+
 [project.urls]
-Homepage = https://github.com/Robert-DeForrest-Reynolds/PyPapple
-Repository = https://github.com/Robert-DeForrest-Reynolds/PyPapple
+Homepage = "https://github.com/Robert-DeForrest-Reynolds/PyPapple"
+Repository = "https://github.com/Robert-DeForrest-Reynolds/PyPapple"
